--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,12 +14,12 @@
   justify-content: center;
 }*/
 
-
 .content-screen {
+  height: 100px;
   min-height: calc(100vh - 111px);
   width: 100%;
   display: flex;
-  padding: 5%;
+  padding: 2%;
   background-color: #9ba4b4;
   align-items: center;
   justify-content: center;
