Tags can be created

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
 }*/
 
 .content-screen {
-  height: 100px;
+  /*height: 100px;*/
   min-height: calc(100vh - 111px);
   width: 100%;
   display: flex;
