--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -9,11 +9,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link
-      href="http://localhost:3000/css/login.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="/css/login.css" rel="stylesheet" type="text/css" />
     <title>Sweat Sign In</title>
   </head>
 
@@ -126,6 +122,6 @@
           </div>
         </div>
       </div>
-    </form>    
+    </form>
   </body>
 </html>
