--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -10,11 +10,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"
   />
-  <link
-    href="http://localhost:3000/css/signup.css"
-    rel="stylesheet"
-    type="text/css"
-  />
+  <link href="/css/signup.css" rel="stylesheet" type="text/css" />
 
   <title>Sign up for Sweat</title>
   <style>
