--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -12,7 +12,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="http://localhost:3000/css/welcome.css" />
+    <link rel="stylesheet" href="/css/welcome.css" />
 
     <title>Welcome</title>
   </head>
@@ -38,7 +38,7 @@
             </div>
             <div class="col-sm-12">
               <img
-                src="http://localhost:3000/images/SweatLogoBlack.png"
+                src="/images/SweatLogoBlack.png"
                 class="rounded mx-auto d-block"
                 alt="App Logo"
               />
