--- a/public/css/connections.css
+++ b/public/css/connections.css
@@ -9,16 +9,20 @@
 .connections-view {
   position: relative;
   margin: 0;
-  padding: 0;
+  padding: 2%;
   width: 100%;
-  height: 100%;
-  background-color: white;
+  background-color: transparent;
+  gap: 1em;
 }
 
 .card-container {
-  min-height: 200px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .card {
-  padding: 0;
+  padding: 0.5em;
+  height: 100%;
 }
