--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,11 +23,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Audiowide"
     />
-    <link rel="stylesheet" href="http://localhost:3000/css/landingPage.css" />
-    <link rel="stylesheet" href="http://localhost:3000/css/messages.css" />
-    <link rel="stylesheet" href="http://localhost:3000/css/connections.css" />
-    <link rel="stylesheet" href="http://localhost:3000/css/footer.css" />
-    <link rel="stylesheet" href="http://localhost:3000/css/app.css" />
+    <link rel="stylesheet" href="/css/landingPage.css" />
+    <link rel="stylesheet" href="/css/messages.css" />
+    <link rel="stylesheet" href="/css/notifications.css" />
+    <link rel="stylesheet" href="/css/connections.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/app.css" />
     <title>Sweat</title>
     <!--<script src="../public/scripts/app.js"></script>-->
     <!-- jQuery -->
@@ -36,7 +37,7 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
-    <script src="http://localhost:3000/scripts/connections.js"></script>
+    <script src="/scripts/connections.js"></script>
   </head>
 
   <body>
@@ -49,7 +50,7 @@
           </h3>
         </div>
         <div class="search">
-          <!--<button><img src="http://localhost:3000/icons/search.png" /></button>-->
+          <!--<button><img src="/icons/search.png" /></button>-->
           <form action=""><input type="text" placeholder="Search" /></form>
         </div>
       </div>
@@ -66,35 +67,31 @@
       <div class="navigation-bar">
         <nav>
           <a href="/home"
-            ><img
-              src="http://localhost:3000/images/SweatLogo.png"
-              class="website-logo"
-              alt="Logo"
+            ><img src="/images/SweatLogo.png" class="website-logo" alt="Logo"
           /></a>
           <ul class="nav-links">
             <!--Home-->
             <li>
               <a href="/home">
-                <img
-                  src="http://localhost:3000/icons/home.png"
-                  alt="home"
-                  class="icon" /><span class="home-text"></span
+                <img src="/icons/home.png" alt="home" class="icon" /><span
+                  class="home-text"
+                ></span
               ></a>
             </li>
             <!--Notifications-->
             <li>
-              <a href="#">
+              <a href="<%= `/users/${currentUser._id}/notifications` %>">
                 <img
-                  src="http://localhost:3000/icons/notifications.png"
+                  src="/icons/notifications.png"
                   alt="notifications"
                   class="icon" /><span class="notifications-text"></span
               ></a>
             </li>
             <!--Messages-->
             <li>
-              <a href="<%= `/users/${currentUser._id}/messages` %>">
+              <a href="<%= `/users/${currentUser._id}/0/messages` %>">
                 <img
-                  src="http://localhost:3000/icons/messages.png"
+                  src="/icons/messages.png"
                   alt="messages"
                   class="icon" /><span class="messages-text"></span
               ></a>
@@ -103,7 +100,7 @@
             <li>
               <a href="<%= `/users/${currentUser._id}` %>"
                 ><img
-                  src="http://localhost:3000/icons/profile.png"
+                  src="/icons/profile.png"
                   alt="profile"
                   class="icon" /><span class="profile-text"></span
               ></a>
@@ -112,7 +109,7 @@
             <li>
               <a href="<%= `/users/${currentUser._id}/connections` %>">
                 <img
-                  src="http://localhost:3000/icons/connections.png"
+                  src="/icons/connections.png"
                   alt="connections"
                   class="icon" /><span class="connections-text"></span
               ></a>
@@ -120,17 +117,16 @@
             <!--Posts-->
             <li>
               <a href="<%= `/stories/${currentUser._id}/story` %>">
-                <img
-                  src="http://localhost:3000/icons/post.png"
-                  alt="post"
-                  class="icon" /><span class="post-text"></span
+                <img src="/icons/post.png" alt="post" class="icon" /><span
+                  class="post-text"
+                ></span
               ></a>
             </li>
             <!--Trending-->
             <li>
               <a href="<%= `/stories/${currentUser._id}/showFeed` %>">
                 <img
-                  src="http://localhost:3000/icons/trending.png"
+                  src="/icons/trending.png"
                   alt="trending"
                   class="icon" /><span class="trending-text"></span
               ></a>
@@ -172,13 +168,13 @@
         <p>Copyright &copy; 2021 Sweat. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="http://localhost:3000/scripts/connections.js"></script>
+    <script src="/scripts/connections.js"></script>
     <!--<script
       src="https://cdn.socket.io/4.0.1/socket.io.min.js"
       integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU"
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://localhost:3000/scripts/messages.js"></script>-->
+    <script src="/scripts/messages.js"></script>-->
   </body>
 </html>
