Added notifications attribute to users

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,8 @@
 }*/
 
 .content-screen {
-  height: calc(100vh - 111px);
+  /*height: 100px;*/
+  min-height: calc(100vh - 111px);
   width: 100%;
   display: flex;
   padding: 2%;
