Tags and Stories now cooperate and reference one another
the .then(res =>console.log("update:",res)) statement was a lifesaver hah! I will remove the typecast at a later time, when its been tested, this is just what is working currently. Added some changes to the story routes as well so trending can be used later.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <!--home.ejs-->
 <div class="main-content">
   <div class="home-container">
-    <div class="cover-container d-flex mx-auto flex-column">
+    <div class="cover-holder d-flex mx-auto flex-column">
       <%- include (`./stories/story`); %>
     </div>
     <br />
