--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -166,7 +166,7 @@
         </div>-->
       </div>
     </header>
-    <div class="content-screen"><%- body%></div>
+    <div class="content-holder"><%- body%></div>
     <footer>
       <div class="law">
         <p>Copyright &copy; 2021 Sweat. All Rights Reserved.</p>
