--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,15 @@
   align-items: center;
   justify-content: center;
 }*/
-
+.content-holder{
+  min-height: calc(100vh - 111px);
+  width: 100%;
+  display: flex;
+  padding: 2%;
+  background-color: #9ba4b4;
+  align-items: center;
+  justify-content: center;
+}
 .content-screen {
   height: 100px;
   min-height: calc(100vh - 111px);
