--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,12 +1,12 @@
 <div class="main-content">
-  <div class="cover-container d-flex mx-auto flex-column">
+  <div class="cover-holder d-flex mx-auto flex-column">
     <!-- Show.ejs -->
       <div class="content-box">
         <h4>
           <%= story.title %>
         </h4>
         <br />
-        <% if (!story.img) {%>
+        <% if (story.img.data == undefined) {%>
           <h5>No Image</h5>
           <% } else{ %>
             <img src="data:image/<%=story.img.contentType%>;base64,
