--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -11,22 +11,44 @@
         <div class="center center-text">Edit your Sweaty story! </div>
         <br />
         <div class="center center-text">Title</div>
-        <input name="title" id="title" class="form-control" placeholder="Title" value="<%= `${story.title}` %>" required />
+        <input 
+            name="title" 
+            type="text"
+            id="title" 
+            class="form-control" 
+            placeholder="Title" 
+            value="<%= `${story.title}` %>" 
+            required />
         <br />
         <div class="form-group">
             <div class="center center-text">Content</div>
-            <textarea name="content" id="content" class="form-control" placeholder="Write your Sweaty Story!"
-                value="<%= `${story.content}` %>" required> </textarea>
+        <textarea 
+            type="text"
+            name="content" 
+            id="content" 
+            class="form-control" 
+            placeholder="Write your Sweaty Story!"
+        ><%= story.content %> 
+        </textarea>
         </div>
         <div class="center-text center form-group" type="text" value="">
             <% if (story.img.data == undefined) {%>
             <div class="float-left" type="text" name="author" id="author" value="">
-                Image <input name="image" id="image" type="file" />
+                Image 
+                <input 
+                name="image" 
+                id="image" 
+                type="file" 
+                />
             </div>
             <% } else{ %>
             <div class="float-left" type="text" name="Image" id="Image" value="data:image/<%=story.img.contentType%>;base64,
                 <%=story.img.data.toString('base64')%>">
-                Image <input name="image" id="image" type="file" />
+                Image 
+                <input 
+                name="image" 
+                id="image" 
+                type="file" />
             </div>
             <% } %>
         </div>
