--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -138,10 +138,9 @@
             <!--All Stories-->
             <li>
               <a href="<%= `/stories/${currentUser._id}/showFeed` %>">
-                <img
-                  src="/icons/more.png"
-                  alt="all"
-                  class="icon" /><span class="all-text"></span
+                <img src="/icons/more.png" alt="all" class="icon" /><span
+                  class="all-text"
+                ></span
               ></a>
             </li>
           </ul>
@@ -175,7 +174,7 @@
         </div>-->
       </div>
     </header>
-    <div class="content-holder"><%- body%></div>
+    <div class="content-screen"><%- body%></div>
     <footer>
       <div class="law">
         <p>Copyright &copy; 2021 Sweat. All Rights Reserved.</p>
